@@ -1,5 +1,4 @@
-import unittest
-from zope.testing.doctestunit import DocTestSuite
+import doctest
 
 def test_include():
     """
@@ -28,9 +27,4 @@ def test_include():
     """
 
 def test_suite():
-    return unittest.TestSuite((
-        DocTestSuite(),
-        ))
-
-if __name__ == '__main__':
-    unittest.main(defaultTest='test_suite')
+    return doctest.DocTestSuite()
